--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>TIME</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
-    <div class="cssBackgroundImg"></div>
-    <!-- <img src="assets/img/wrench.png"> Hi :3 -->
-    <h1>Everything You Need</h1> 
-
-    <div class="text">
-        <h2>IKEA</h2>
-        <h3><a href="https://www.bigtimer.net/">Countdown</a></h3>
+    <div class="container">
+        Hello World
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
