--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     
 </head>
 <body>
+    <div class="cssBackgroundImg"></div>
+    <!-- <img src="assets/img/wrench.png"> Hi :3 -->
+    <h1>Everything You Need</h1> 
+
+    <div class="text">
+        <h2>IKEA</h2>
+        <h3><a href="https://www.bigtimer.net/">Countdown</a></h3>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">Col One</div>
