--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="cssBackgroundImg"></div>
-    <img src="assets/img/wrench.png"> Hi :3 
+    <!-- <img src="assets/img/wrench.png"> Hi :3 -->
     <h1>Everything You Need</h1> 
 
     <div class="text">
