--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <style>
+    body {
+        background-color: #1ad2ea;
+        font-family: Helvetica, Arial, sans-serif;
+      }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
