--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     
-    <h1>Everything You Need</h1> 
+    <h1>It's... It's You.</h1> 
 
     <div class="text">
-        <h2>IKEA</h2>
-        <h3><a href="https://www.bigtimer.net/">Countdown</a></h3>
+        <h2>What are you doing here?</h2>
+        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">I don't know</a></h3>
     </div>
     <div class="container">
         <div class="row">
