--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <h1>It's... It's You.</h1> 
+<div class="container">
+    <h1>You're sitting at the top of the hill.</h1> 
 
     <div class="text">
         <h2>What are you doing here?</h2>
-        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">I don't know</a></h3>
+        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Up</a></h3>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">Col One</div>
-            <div class="col-sm-12 col-md-6 col-lg-8">Col Two</div>
-        </div>
-    </div>
+</div>
 </body>
 </html>
