--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <h1>You're sitting at the top of the hill.</h1> 
 
     <div class="text">
-        <h2>What are you doing here?</h2>
+        <h2>Where will you go from here?</h2>
         <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Up</a></h3>
     </div>
 </div>
