--- a/page2.html
+++ b/page2.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
+    <style>
+        body{
+            background-color: skyblue;
+        }
+    </style>
 </head>
 <body>
-    
-    <h1>Are you okay?</h1> 
+<div class="container">
+    <h1>You're high up in the sky</h1> 
 
     <div class="text">
-        <h2>Do you need anything?</h2>
-        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">No.</a></h3>
+        <h2>Where will you go from here?</h2>
+        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">Up</a></h3>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">Col One</div>
-            <div class="col-sm-12 col-md-6 col-lg-8">Col Two</div>
-        </div>
-    </div>
+</div>
 </body>
 </html>
