--- a/index.html
+++ b/index.html
@@ -2,24 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
     <style>
         body{
-            background-color: brown;
+            background-color: rgba(165, 110, 42, 0.576);
         }
+
+        .rock-salt-regular {
+        font-family: "Rock Salt", cursive;
+        font-weight: 400;
+        font-style: normal;
+        }
+     h1 {
+        font-family: 'Rock Salt';
+        color: rgb(248, 184, 174);
+        font-size: 3rem;
+        text-align: center;
+    }
+  
+    h2 {
+        font-family: 'Rock Salt';
+        color: dodgerblue;
+        font-size: 2.5rem;
+        text-align: left;
+    }
+  
+    .atkinson-hyperlegible-next-ale {
+        font-family: "Atkinson Hyperlegible Next", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 200;
+        font-style: normal;
+    }
+
+    h3 {
+        font-family: 'Atkinson Hyperlegible Next';
+        font-size: 1rem;
+        text-align: right;
+        margin-top: -2.5rem;
+    }
+  
+    h3 a:link,
+    a:visited {
+        color: rgb(254, 253, 202);
+        text-decoration: none;
+    }
+  
+    h3 a:hover {
+    color: white;
+    }
+
     </style>
 </head>
 <body>
 <div class="container">
     <h1>You're in a dark cave. The air feels cold and static. Your journey is nearly at its end.</h1> 
-
-    <div class="text">
-        <h2>You see a split path ahead of you. Where will you go from here?</h2>
-        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Up</a></h3>
-    </div>
+    <h2>You see a split path ahead of you. Where will you go from here?</h2>
+    <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Towards the light</a></h3>
 </div>
 </body>
 </html>
