--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
     <style>
         body{
-            background-color: rgba(165, 110, 42, 0.576);
+            background-color: rgb(123, 75, 16);
         }
 
         .rock-salt-regular {
