--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
     <style>
         body{
-            background-color: rgb(123, 75, 16);
+            background-color: rgb(0, 0, 0);
         }
 
         .rock-salt-regular {
@@ -17,16 +17,16 @@
         }
      h1 {
         font-family: 'Rock Salt';
-        color: rgb(248, 184, 174);
+        color: rgb(146, 135, 155);
         font-size: 3rem;
         text-align: center;
     }
   
     h2 {
         font-family: 'Rock Salt';
-        color: dodgerblue;
+        color: rgb(108, 151, 138);
         font-size: 2.5rem;
-        text-align: left;
+        text-align: center;
     }
   
     .atkinson-hyperlegible-next-ale {
@@ -39,7 +39,7 @@
     h3 {
         font-family: 'Atkinson Hyperlegible Next';
         font-size: 1rem;
-        text-align: right;
+        text-align: center;
         margin-top: -2.5rem;
     }
   
