--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>You're in a dark cave. The air feels cold and static. Your journey is nearly at its end.</h1> 
-    <h2>You see a split path ahead of you. Where will you go from here?</h2>
-    <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Towards the light</a></h3>
+    <h1>You've Always Been Here</h1>
+    <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h3>
 </div>
 </body>
 </html>
