--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         color: rgb(146, 135, 155);
         font-size: 3rem;
         text-align: center;
+        margin: 30px;
     }
   
     h2 {
