--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         margin-top: -2.5rem;
     }
   
-    h3 a:link,
+    h2 a:link,
     a:visited {
         color: rgb(254, 253, 202);
         text-decoration: none;
     }
   
-    h3 a:hover {
-    color: white;
+    h2 a:hover {
+    color: rgb(204, 15, 68);
     }
 
     </style>
@@ -59,7 +59,7 @@
 <body>
 <div class="container">
     <h1>You've Always Been Here</h1>
-    <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h3>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
 </div>
 </body>
 </html>
