--- a/page2.html
+++ b/page2.html
@@ -2,24 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Doto:wght@100..900&family=Lilita+One&family=Monoton&family=Orbitron:wght@500&family=Outfit:wght@100..900&family=Press+Start+2P&family=Righteous&family=Rock+Salt&display=swap" rel="stylesheet">
     <style>
         body{
-            background-color: skyblue;
+            background-color: rgb(0, 0, 0);
         }
+
+        .rock-salt-regular {
+        font-family: "Rock Salt", cursive;
+        font-weight: 400;
+        font-style: normal;
+        }
+     h1 {
+        font-family: 'Rock Salt';
+        color: rgb(146, 135, 155);
+        font-size: 3rem;
+        text-align: center;
+        margin: 30px;
+    }
+  
+    h2 {
+        font-family: 'Rock Salt';
+        color: rgb(108, 151, 138);
+        font-size: 2.5rem;
+        text-align: center;
+    }
+  
+    .atkinson-hyperlegible-next-ale {
+        font-family: "Atkinson Hyperlegible Next", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 200;
+        font-style: normal;
+    }
+
+    h3 {
+        font-family: 'Atkinson Hyperlegible Next';
+        font-size: 3rem;
+        text-align: center;
+        margin-top: -2.5rem;
+    }
+  
+    h2 a:link,
+    a:visited {
+        color: rgb(254, 253, 202);
+        text-decoration: none;
+    }
+  
+    h2 a:hover {
+    color: rgb(204, 15, 68);
+    }
+
+    .text{
+        font-family: 'Atkinson Hyperlegible Next';
+        font-size: 3rem;
+        text-align: center;
+        margin-top: -2.5rem;
+    }
+
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>You're high up in the sky</h1> 
-
-    <div class="text">
-        <h2>Where will you go from here?</h2>
-        <h3><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">Up</a></h3>
-    </div>
+    <h1>You lie in your bed. You've Always Been Here</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">Begin</a></h2>
+    <element class="text">d</element>
 </div>
 </body>
 </html>
