--- a/page2.html
+++ b/page2.html
@@ -56,6 +56,7 @@
 
     .text{
         font-family: 'Atkinson Hyperlegible Next';
+        color: rgb(204, 15, 68);
         font-size: 3rem;
         text-align: center;
         margin-top: -2.5rem;
