--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>You've Always Been Here</h1>
+    <h1>You're Still Here</h1>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
 </div>
 </body>
