--- a/page2.html
+++ b/page2.html
@@ -66,9 +66,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>You lie in your bed. You've Always Been Here</h1>
+    <h1>You lie in your bed. You're Still Here</h1>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">I Have So Much I Need To Do</a></h2>
-    <h4>d</h4>
 </div>
 </body>
 </html>
