--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
         font-weight: 400;
         font-style: normal;
         }
-     h1 {
+    h1 {
         font-family: 'Rock Salt';
         color: rgb(146, 135, 155);
         font-size: 3rem;
@@ -29,21 +29,7 @@
         font-size: 2.5rem;
         text-align: center;
     }
-  
-    .atkinson-hyperlegible-next-ale {
-        font-family: "Atkinson Hyperlegible Next", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 200;
-        font-style: normal;
-    }
 
-    h3 {
-        font-family: 'Atkinson Hyperlegible Next';
-        font-size: 3rem;
-        text-align: center;
-        margin-top: -2.5rem;
-    }
-  
     h2 a:link,
     a:visited {
         color: rgb(204, 15, 68);
@@ -54,20 +40,13 @@
         color: rgb(254, 253, 202);
     }
 
-    h4{
-        font-family: 'Atkinson Hyperlegible Next';
-        color: rgb(204, 15, 68);
-        font-size: 3rem;
-        text-align: center;
-        margin-top: -2.5rem;
-    }
-
     </style>
 </head>
 <body>
 <div class="container">
     <h1>You lie in your bed. You're Still Here</h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">I Have So Much I Need To Do</a></h2>
+    <h2>I Have<a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">So Much</a>
+    I need to <a href="https://rpmartir.github.io/hyperlink-narrative/page4.html">do</a></h2>
 </div>
 </body>
 </html>
