--- a/page6.html
+++ b/page6.html
@@ -44,8 +44,9 @@
 </head>
 <body>
 <div class="container">
-    <h1></h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
+    <h1>Hey, hey, no need to attack me for just speaking the truth.</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page10.html">All you are is negative.</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page11.html">I just want the pain to stop.</a></h2>
 </div>
 </body>
 </html>
