--- a/page5.html
+++ b/page5.html
@@ -46,6 +46,7 @@
 <div class="container">
     <h1>So what are you going to do?</h1>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page4.html">I can start on it anytime.</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page7.html">...</a></h2>
 </div>
 </body>
 </html>
