--- a/page7.html
+++ b/page7.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Sooo... Nothing, huh?</h1>
+    <h1>Sooo... Nothing, huh? You're Still Here</h1>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Like you're surpised. You know how we are.</a></h2>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page9.html">I just can't bring myself to move. I'm frozen.</a></h2>
 </div>
