--- a/page16.html
+++ b/page16.html
@@ -44,9 +44,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>How awful for you. Meanwhile, the adults of the world are out getting things done. You're Still Here.</h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page13.html">Leave me alone.</a></h2>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page6.html">Shut up.</a></h2>
+    <h1>...You're Still Here.</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page16.html">...</a></h2>
 </div>
 </body>
 </htm
