--- a/page13.html
+++ b/page13.html
@@ -44,8 +44,8 @@
 </head>
 <body>
 <div class="container">
-    <h1></h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
+    <h1>You know I can't. I'm stuck here with you, and You're Still Here.</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html"></a></h2>
 </div>
 </body>
 </htm
