--- a/page14.html
+++ b/page14.html
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <h1></h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page15.html">...</a></h2>
 </div>
 </body>
 </htm
