--- a/page15.html
+++ b/page15.html
@@ -44,8 +44,8 @@
 </head>
 <body>
 <div class="container">
-    <h1></h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
+    <h1>...It's the next day.</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page16.html">...</a></h2>
 </div>
 </body>
 </htm
