--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>You lie in your bed. You're Still Here</h1>
+    <h1>It's dawn. You lie in your bed. You're Still Here</h1>
     <h2>I Have <a href="https://rpmartir.github.io/hyperlink-narrative/page3.html">So Much</a>
     I need to <a href="https://rpmartir.github.io/hyperlink-narrative/page5.html">do</a></h2>
 </div>
