--- a/page10.html
+++ b/page10.html
@@ -44,8 +44,9 @@
 </head>
 <body>
 <div class="container">
-    <h1></h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html">Begin</a></h2>
+    <h1>Well then please, tell me something I should be positive about. Because as far as I can tell, You're Still Here.</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page12.html">Just give me like five more minutes and I'll start.</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page7.html">...</a></h2>
 </div>
 </body>
-</htm
+</html>
