--- a/page13.html
+++ b/page13.html
@@ -45,7 +45,8 @@
 <body>
 <div class="container">
     <h1>You know I can't. I'm stuck here with you, and You're Still Here.</h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page2.html"></a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page10.html">You're always so negative.</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page11.html">Would you stop saying that?!</a></h2>
 </div>
 </body>
-</htm
+</html>
