--- a/page17.html
+++ b/page17.html
@@ -44,9 +44,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Hey, hey, no need to attack me for just speaking the truth. You're Still Here</h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page10.html">All you are is negative.</a></h2>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page12.html">I'll get started eventually, I swear.</a></h2>
+    <h1>...</h1>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page18.html">...</a></h2>
 </div>
 </body>
 </html>
