--- a/page7.html
+++ b/page7.html
@@ -45,7 +45,7 @@
 <body>
 <div class="container">
     <h1>Sooo... Nothing, huh? You're Still Here</h1>
-    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page11.html">Would you stop saying that?!</a></h2>
+    <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page4.html">I'll do it, I'll do it.</a></h2>
     <h2><a href="https://rpmartir.github.io/hyperlink-narrative/page8.html">I just can't bring myself to move. I'm frozen.</a></h2>
 </div>
 </body>
